fixed overflow hidden

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -69,7 +69,7 @@
 }
 
 body.lock {
-  @media (max-width: 768px) {
+  @media (max-width: 830px) {
     overflow: hidden;
   }
 }
